////////////////////////////////////////////////////////////////////////////////////////////////////
/// @file      CustomProductControllerStatePlayingSelected.h
///
/// @brief     This header file declares functionality to process events that occur during the
///            playing selected state that are custom to the Professor product.
///
/// @attention Copyright (C) 2018 Bose Corporation All Rights Reserved
////////////////////////////////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////////////////////////////////
///            Included Header Files
////////////////////////////////////////////////////////////////////////////////////////////////////
#pragma once
#include <string>
#include "ProductControllerState.h"
#include "HsmState.h"

////////////////////////////////////////////////////////////////////////////////////////////////////
///                            Start of Product Application Namespace                            ///
////////////////////////////////////////////////////////////////////////////////////////////////////
namespace ProductApp
{

////////////////////////////////////////////////////////////////////////////////////////////////////
///            Forward Class Declarations
////////////////////////////////////////////////////////////////////////////////////////////////////
class ProductControllerHsm;

////////////////////////////////////////////////////////////////////////////////////////////////////
/// @brief The CustomProductControllerStatePlayingSelected Class
////////////////////////////////////////////////////////////////////////////////////////////////////
class CustomProductControllerStatePlayingSelected : public ProductControllerStatePlayingSelected
{
public:

    CustomProductControllerStatePlayingSelected( ProductControllerHsm& hsm,
                                                 CHsmState*            pSuperState,
                                                 Hsm::STATE            stateId,
                                                 const std::string&    name = "CustomPlayingSelected" );

    ~CustomProductControllerStatePlayingSelected( ) override
    {

    }

    bool HandleIntentSpeakerPairing( KeyHandlerUtil::ActionType_t intent )  override;

protected:

    ////////////////////////////////////////////////////////////////////////////////////////////////
    /// @brief This overridden method is used for product specific conditional checks and potential
    ///        state changes to custom states based on the product. It returns a true Boolean value
    ///        if a product specific state change takes place or false otherwise.
    ////////////////////////////////////////////////////////////////////////////////////////////////
    bool PossiblyGoToCustomState( ) override;
};

////////////////////////////////////////////////////////////////////////////////////////////////////
///                           End of the Product Application Namespace                           ///
////////////////////////////////////////////////////////////////////////////////////////////////////
}

////////////////////////////////////////////////////////////////////////////////////////////////////
///                                         End of File                                          ///
////////////////////////////////////////////////////////////////////////////////////////////////////
